k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service-deployment
  labels:
    app: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: CONTAINER_IMAGE
          ports:
            - containerPort: 80
